<resources>
  <string name="app_name">Geofences</string>

  <!--  Labels-->
  <string name="label_dashboard">Dashboard</string>
  <string name="label_add_geofence">Add a Geofence</string>
  <string name="label_permission_request">This application needs access to your location in order to enable you create and monitor your geofences.\nPlease accept the permissions request when prompted.</string>
  <string name="label_continue">Continue</string>
  <string name="label_enter_geofence_name">Enter geofence name</string>
  <string name="label_enter_geofence_radius">Enter geofence radius</string>
  <string name="label_enter">Enter</string>
  <string name="label_exit">Exit</string>
  <string name="label_dwell">Dwell</string>
  <string name="label_save">Save</string>
  <string name="label_name">Name</string>
  <string name="label_home">Home</string>
  <string name="label_radius">Radius</string>
  <string name="label_initial_geofence_events">Initial Geofence Events</string>
  <string name="label_geofence_events">Geofence Events</string>

  <!--  Errors and Warnings-->
  <string name="warning_no_geofences">You currently don\'t have geofences being monitored</string>
  <string name="error_enter_valid_name">Please enter a non-empty name</string>
  <string name="error_select_initial_trigger">Please select one or more initial transition triggers</string>
  <string name="error_enter_valid_radius">Please enter a numerical value greater than zero</string>

  <!-- Permissions -->
  <string name="permission_rationale_location">This application requires access to your location services to work.\n\nPlease grant the location permission when prompted</string>
  <string name="location_permission_denied">This application requires access to your location services to work. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings</string>
  <string name="permission_required_toast">Location permission is require</string>


</resources>