<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android">

  <data>

    <variable
      name="viewModel"
      type="com.mikekamau.geofences.ui.GeofenceViewModel" />

    <variable
      name="fragment"
      type="com.mikekamau.geofences.ui.DashboardFragment" />

  </data>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spacing_medium"
      android:layout_marginBottom="@dimen/spacing_medium"
      android:layout_marginStart="@dimen/spacing_medium"
      android:layout_marginEnd="@dimen/spacing_medium"
      android:text="@string/app_name"
      android:textColor="@color/elephant"
      android:textSize="@dimen/text_size_xlarge" />

    <com.google.android.material.textview.MaterialTextView
      android:id="@+id/tv_warning_no_geofence"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spacing_medium"
      android:layout_marginBottom="@dimen/spacing_medium"
      android:layout_marginStart="@dimen/spacing_xxlarge"
      android:layout_marginEnd="@dimen/spacing_xxlarge"
      android:layout_centerInParent="true"
      android:text="@string/warning_no_geofences"
      android:textAlignment="center"
      android:textColor="@color/elephant"
      android:textSize="@dimen/text_size_large"
      tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/btn_add_geofence"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spacing_medium"
      android:layout_marginBottom="@dimen/spacing_medium"
      android:layout_alignParentBottom="true"
      android:text="@string/label_add_geofence"
      android:textSize="@dimen/text_size_medium"
      android:textAllCaps="false"/>

  </RelativeLayout>

</layout>